src/App.css
html,
body,
#root {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
}

canvas {
  display: block;
}

.canvas-container {
  width: 100%;
  height: 100vh;
}

.ashtray-btn {
  position: absolute;
  bottom: 40px;
  left: 50%;
  transform: translateX(-50%);
  background-color: #1f2937;
  color: white;
  padding: 8px 16px;
  border-radius: 8px;
  z-index: 20;
  cursor: pointer;
}

.ashtray-btn:hover {
  background-color: #373e49;
  transition: all 300ms;
}

.timestamp {
  /* position: absolute;
  top: 10px;
   */
  width: 400px;
  font-family: Georgia, "Times New Roman", Times, serif;
}

.title {
  position: absolute;
  top: 32px;
  z-index: 30;
  width: 100vw;
  text-align: center;
  font-size: 8rem;
  line-height: 90%;
}

